agregado titulo de la pagina

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <header>
         <div class="video-bg">
-            <video src="video/bg-banner1.mp4" autoplay muted loop></video>
+            <video src="video/bg-banner.mp4" autoplay muted loop></video>
+        </div>
+        <div class="title-container">
+            <h1>Osmar Debegnach</h1>
+            <p>Desarrollador Web</p>
         </div>
     </header>
 </body>
