--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,154 @@
 
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+
+    <style>
+        .loading {
+            display: flex;
+            flex-flow: column;
+            position: absolute;
+            top: 0; left: 0;
+            z-index: 9999;
+            background-color: #0e0e0e;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+        }
+
+        .show {
+            opacity: 1;
+        }
+
+        .loading-text{
+            color: #fff;
+            font-size: 2rem;
+            margin-top: 50px;
+        }
+
+        .sk-cube-grid {
+            width: 20vh;
+            height: 20vh;
+        }
+
+        .sk-cube-grid .sk-cube {
+            width: 33%;
+            height: 33%;
+            background-color: #fff;
+            float: left;
+            -o-animation: sk-cubeGridScaleDelay 2s infinite ease-in-out;
+            -webkit-animation: sk-cubeGridScaleDelay 2s infinite ease-in-out;
+            animation: sk-cubeGridScaleDelay 2s infinite ease-in-out;
+        }
+
+        .sk-cube-grid .sk-cube1 {
+            -o-animation-delay: 0.2s;
+            -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
+        }
+
+        .sk-cube-grid .sk-cube2 {
+            -o-animation-delay: 0.3s;
+            -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+        }
+
+        .sk-cube-grid .sk-cube3 {
+            -o-animation-delay: 0.4s;
+            -webkit-animation-delay: 0.4s;
+            animation-delay: 0.4s;
+        }
+
+        .sk-cube-grid .sk-cube4 {
+            -o-animation-delay: 0.1s;
+            -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s;
+        }
+
+        .sk-cube-grid .sk-cube5 {
+            -o-animation-delay: 0.2s;
+            -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
+        }
+
+        .sk-cube-grid .sk-cube6 {
+            -o-animation-delay: 0.3s;
+            -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+        }
+
+        .sk-cube-grid .sk-cube7 {
+            -o-animation-delay: 0s;
+            animation-delay: 0s;
+        }
+
+        .sk-cube-grid .sk-cube8 {
+            -o-animation-delay: 0.1s;
+            -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s;
+        }
+
+        .sk-cube-grid .sk-cube9 {
+            -o-animation-delay: 0.2s;
+            -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s;
+        }
+
+        @-webkit-keyframes sk-cubeGridScaleDelay {
+
+            0%,
+            70%,
+            100% {
+                -o-transform: scale3D(1, 1, 1);
+                -webkit-transform: scale3D(1, 1, 1);
+                transform: scale3D(1, 1, 1);
+            }
+
+            35% {
+                -o-transform: scale3D(0, 0, 1);
+                -webkit-transform: scale3D(0, 0, 1);
+                transform: scale3D(0, 0, 1);
+            }
+        }
+
+        @keyframes sk-cubeGridScaleDelay {
+
+            0%,
+            70%,
+            100% {
+                -o-transform: scale3D(1, 1, 1);
+                -webkit-transform: scale3D(1, 1, 1);
+                transform: scale3D(1, 1, 1);
+            }
+
+            35% {
+                -o-transform: scale3D(0, 0, 1);;
+                -webkit-transform: scale3D(0, 0, 1);
+                transform: scale3D(0, 0, 1);
+            }
+        }
+    </style>
+    <div class="loading show">
+        <div class="sk-cube-grid">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+        </div>
+        <p class="loading-text">Cargando...</p>
+    </div>
+
+    <script src="js/loadingScreen.js"></script>
+
+
     <header>
         <div class="video-bg">
             <video src="video/bg-banner.mp4" autoplay muted loop></video>
@@ -17,6 +165,16 @@
             <h1>Osmar Debegnach</h1>
             <p>Desarrollador Web</p>
         </div>
+
+        <aside class="left-side">
+            <ul>
+                <li><a href="#">Mail</a></li>
+                <li><a href="#">LinkedIn</a></li>
+                <li><a href="#">Tweeter</a></li>
+                <li><a href="#">Instagram</a></li>
+            </ul>
+        </aside>
     </header>
 </body>
+
 </html>
