--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
                 <li><a href="#">Correo</a></li>
                 <li><a href="#">LinkedIn</a></li>
-                <li><a href="#">Tweeter</a></li>
+                <li><a href="#">Twitter</a></li>
                 <li><a href="#">Instagram</a></li>
             </ul>
         </aside>
